--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 600px;
 }
 
 header {
@@ -29,6 +30,8 @@ header {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  
+
 }
 
 .row {
@@ -41,6 +44,8 @@ header {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  text-align: left;
+  
 }
 
 .past {
@@ -64,6 +69,8 @@ header {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  padding: 15px;
+  font-size: 30px;
 }
 
 .saveBtn i:hover {
